Bug 95992 - "Edit" > "Compare Document..." opens dialog that is misnamed "Insert"
Summary: "Edit" > "Compare Document..." opens dialog that is misnamed "Insert"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.2.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-22 19:53 UTC by Matthew Paul Thomas
Modified: 2017-04-19 04:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Paul Thomas 2015-11-22 19:53:11 UTC
LibreOffice 4.2.8.2, Ubuntu 14.04
LibreOffice 5.0.2.2, Ubuntu Gnome 15.10

1. In Writer, choose "Edit" > "Compare Document..."

What happens: A file picker opens, with the title "Insert".

What should happen: The title should be something like "Choose Document to Compare".
Comment 1 Adolfo Jayme Barrientos 2015-11-23 00:03:43 UTC
Thanks, confirmed.
Comment 2 QA Administrators 2017-01-03 19:36:24 UTC Comment hidden (obsolete)
Comment 3 Matteo Casalin 2017-03-16 15:28:29 UTC
Confirmed on recent master.
Issue is due to using DocumentInserter class to implement compare (and merge) functionality, which sets "Insert" as dialog caption.
Will submit a patch to gerrit for review.
Comment 4 Matteo Casalin 2017-03-17 09:20:06 UTC
Fix submitted to gerrit for review as https://gerrit.libreoffice.org/#/c/35285

I took the chance to also fix the "merge" case, so:
* "Compare" opens a dialog with "Compare to" caption
* "Merge" opens a dialog with "Merge with" caption

Please also note that the "Compare Document..." menu at some point was moved into the "Track changes" sub-menu (which didn't affect the caption).
Comment 5 Commit Notification 2017-04-18 14:25:59 UTC
Matteo Casalin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2d3e936ab03274696f235c9d74e247380070f6f

tdf#95992 "Edit" > "Compare Document..." opens dialog that is...

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.